Filling the pool does not reset the turn anymore